--- a/frontend/style.scss
+++ b/frontend/style.scss
@@ -3,79 +3,89 @@
     background: red;
 }
 /* https://codepen.io/sdudnyk/pen/bWbqMb brackets */
-$side-margin: 50px;
-$vertical-margin: 10px;
-.wrapper{
-    display: flex;
-    height: 600px;
-    justify-content: center;
-    background: #333;
+*,
+*::after,
+*::before {
+    box-sizing: border-box;
 }
 
-.item{
+.bracket {
     display: flex;
-    flex-direction: row-reverse;
-    p{
-        padding: 20px;
-        margin: 0;
-        background-color: Beige;
-    }
+}
 
-    &-parent{
-        position: relative;
-        margin-left: $side-margin;
-        display: flex;
-        align-items: center;
-        &:after{
-            position: absolute;
-            content: '';
-            width: math.div($side-margin, 2);
-            height: 2px;
-            left: 0;
-            top: 50%;
-            background-color: #fff;
-            transform: translateX(-100%);
-        }
-    }
-    &-childrens{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }
-    &-child{
-        display: flex;
-        align-items: flex-start;
-        justify-content: flex-end;
-        margin-top: $vertical-margin;
-        margin-bottom: $vertical-margin;
-        position: relative;
-        &:before{
-            content: '';
-            position: absolute;
-            background-color: #fff;
-            right: 0;
-            top: 50%;
-            transform: translateX(100%);
-            width: 25px;
-            height: 2px;
-        }
-        &:after{
-            content: '';
-            position: absolute;
-            background-color: #fff;
-            right: math.div(-$side-margin, 2);
-            //right:-25px;
-            height: calc(50% + 22px) ;
-            width: 2px;
-            top: 50%;
-        }
-        &:last-child{
-        &:after{
-            transform: translateY(-100%);
-        }
-        }
-        &:only-child:after{          
-        display: none;          
-        }
-    }
+.round {
+    display: flex;
+    flex-grow: 1;
+    flex-direction: column;
+}
+
+.round:first-child .match::before {
+    display: none;
+}
+
+.round:first-child .match__content::before {
+    display: none;
+}
+
+.round:last-child .match::after {
+    display: none;
+}
+
+.match {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0 10px;
+    padding: 6px 0;
+    flex-grow: 1;
+    position: relative;
+}
+
+.match::before {
+    content: "";
+    display: block;
+    min-height: 30px;
+    border-left: 2px solid purple;
+    position: absolute;
+    left: -10px;
+    top: 50%;
+    margin-top: -15px;
+    margin-left: -2px;
+}
+
+.match:nth-child(odd)::after {
+    content: "";
+    display: block;
+    border: 2px solid transparent;
+    border-top-color: purple;
+    border-right-color: purple;
+    height: 50%;
+    position: absolute;
+    right: -10px;
+    width: 10px;
+    top: 50%;
+}
+
+.match:nth-child(even)::after {
+    content: "";
+    display: block;
+    border: 2px solid transparent;
+    border-bottom-color: purple;
+    border-right-color: purple;
+    height: 50%;
+    position: absolute;
+    right: -10px;
+    width: 10px;
+    bottom: 50%;
+}
+
+.match__content::before {
+    content: "";
+    display: block;
+    width: 10px;
+    border-bottom: 2px solid purple;
+    margin-left: -2px;
+    position: absolute;
+    top: 50%;
+    left: -10px;
 }
