--- a/frontend/style.scss
+++ b/frontend/style.scss
@@ -89,3 +89,9 @@
     top: 50%;
     left: -10px;
 }
+.matchstyle {
+    border: '2px solid black';
+    width: '100%';
+    height: '30px';
+    position: 'relative';
+}
