--- a/frontend/style.scss
+++ b/frontend/style.scss
@@ -39,18 +39,18 @@
     padding: 6px 0;
     flex-grow: 1;
     position: relative;
-}
-
-.match::before {
-    content: "";
-    display: block;
-    min-height: 30px;
-    border-left: 2px solid purple;
-    position: absolute;
-    left: -10px;
-    top: 50%;
-    margin-top: -15px;
-    margin-left: -2px;
+    vertical-align: middle;
+    &::before {
+        content: "";
+        display: block;
+        min-height: 30px;
+        border-left: 2px solid purple;
+        position: absolute;
+        left: -10px;
+        top: 50%;
+        margin-top: -15px;
+        margin-left: -2px;
+    }
 }
 
 .match:nth-child(odd)::after {
@@ -59,24 +59,24 @@
     border: 2px solid transparent;
     border-top-color: purple;
     border-right-color: purple;
-    height: 50%;
+    height: 80%;
     position: absolute;
     right: -10px;
     width: 10px;
-    top: 50%;
+    top: 65%;
 }
 
-.match:nth-child(even)::after {
+.match:nth-child(2n+0)::after {
     content: "";
     display: block;
     border: 2px solid transparent;
     border-bottom-color: purple;
     border-right-color: purple;
-    height: 50%;
+    height: 80%;
     position: absolute;
     right: -10px;
     width: 10px;
-    bottom: 50%;
+    bottom: 38%;
 }
 
 .match__content::before {
@@ -89,9 +89,19 @@
     top: 50%;
     left: -10px;
 }
-.matchstyle {
-    border: '2px solid black';
-    width: '100%';
-    height: '30px';
-    position: 'relative';
+.matchplayer {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    position: relative;
+
+    .player {
+        flex: 1 1 auto;
+        margin: 0;
+        border: 2px solid black;
+        text-align: left;
+        position: relative;
+    }
 }
+
+
