--- a/frontend/style.scss
+++ b/frontend/style.scss
@@ -17,7 +17,10 @@
     display: flex;
     flex-grow: 1;
     flex-direction: column;
+    padding: 0;
+    margin: 0;
 }
+
 
 .round:first-child .match::before {
     display: none;
@@ -43,13 +46,19 @@
     &::before {
         content: "";
         display: block;
-        min-height: 30px;
+        min-height: 20px;
         border-left: 2px solid purple;
         position: absolute;
         left: -10px;
         top: 50%;
         margin-top: -15px;
         margin-left: -2px;
+    }
+    &:nth-child(2n+0) {
+        padding-top: 0;
+        padding-top: 0;
+        margin-top: 0;
+        margin-bottom: 0;
     }
 }
 
@@ -59,20 +68,20 @@
     border: 2px solid transparent;
     border-top-color: purple;
     border-right-color: purple;
-    height: 80%;
+    height: 50%;
     position: absolute;
     right: -10px;
     width: 10px;
-    top: 65%;
+    top: 50%;
 }
 
-.match:nth-child(2n+0)::after {
+.match:nth-child(even)::after {
     content: "";
     display: block;
     border: 2px solid transparent;
     border-bottom-color: purple;
     border-right-color: purple;
-    height: 80%;
+    height: 50%;
     position: absolute;
     right: -10px;
     width: 10px;
@@ -94,7 +103,8 @@
     flex-direction: column;
     width: 100%;
     position: relative;
-
+    margin: 0;
+    padding: 0;
     .player {
         flex: 1 1 auto;
         margin: 0;
