--- a/frontend/style.scss
+++ b/frontend/style.scss
@@ -1,4 +1,7 @@
 @use "sass:math";
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+$backclr: #edece9;
 .newTournament {
     background: red;
 }
@@ -8,7 +11,11 @@
 *::before {
     box-sizing: border-box;
 }
-
+body{
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins', sans-serif;
+}
 .bracket {
     display: flex;
 }
@@ -33,7 +40,9 @@
 .round:last-child .match::after {
     display: none;
 }
-
+.round:last-child .match::before {
+    display: none;
+}
 .match {
     display: flex;
     flex-direction: column;
@@ -44,13 +53,13 @@
     position: relative;
     vertical-align: middle;
     &::before {
-        content: "";
+        content: "t";
         display: block;
         min-height: 20px;
         border-left: 2px solid purple;
         position: absolute;
         left: -10px;
-        top: 50%;
+        top: 60%;
         margin-top: -15px;
         margin-left: -2px;
     }
@@ -113,5 +122,12 @@
         position: relative;
     }
 }
+
+
+
+
+
+
+
 
 
